<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:theme="@style/Theme.Memento"
    tools:context=".presentation.ui.account.AccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_4"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/screen_account_header"
        android:textColor="@color/white"
        android:textSize="@dimen/text_lg" />

    <EditText
        android:id="@+id/brith_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_4"
        android:layout_marginVertical="@dimen/space_2"
        android:hint="@string/screen_account_year_field"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/brith_month_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_4"
        android:layout_marginVertical="@dimen/space_2"
        android:hint="@string/screen_account_month_field"
        android:inputType="number"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/brith_day_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_4"
        android:layout_marginVertical="@dimen/space_2"
        android:hint="@string/screen_account_day_field"
        android:inputType="numberDecimal"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/life_expectancy_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_4"
        android:layout_marginVertical="@dimen/space_2"
        android:hint="@string/screen_account_life_expectancy_field"
        android:inputType="numberDecimal"
        android:textColorHint="@color/white" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_4"
        android:fontFamily="@font/inter_semi_bold"
        android:paddingVertical="@dimen/space_4"
        android:text="@string/general_buttons_save"
        android:textSize="@dimen/text_md"
        app:cornerRadius="@dimen/space_2" />
</androidx.appcompat.widget.LinearLayoutCompat>
